fix report, add fitler to user report
